--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,6 +4,7 @@
     <form action="/logout" method="post">
         <button type="submit">Logout</button>
     </form>
+    <a href="/urls/new">Create a new link</a>
     <%  } else {%>
     <a href="/login">Login</a>
     <a href="/register">Register</a>
