--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,16 +7,24 @@
 <%- include('partials/_header') %>
 <h1>List of Short URLs</h1>
 <ul>
+    <% if (typeof user !== "undefined") { %>
+        <% for (let key in urls ) { %>
+        <li>
+            <a href="/u/<%= key %>"><%= key %></a>
+            <a href="/urls/<%= key %>">Edit</a>
+            <form method="POST" action="/urls/<%= key %>/delete">
+                <input type="hidden" name="id" value="<%= key %>">
+                <button type="submit">Delete</button>
+            </form>
+        </li>
+        <% } %>
+    <% } else { %>
     <% for (let key in urls ) { %>
     <li>
-        <%= key%>
-        <a href="/urls/<%= key%>">Edit</a>
-        <form method="POST" action="/urls/<%= key%>/delete">
-            <input type="hidden" name="id" value="<%= key%>">
-            <button type="submit">Delete</button>
-        </form>
+        <a href="/u/<%= key %>"><%= key %></a>
     </li>
     <% } %>
+        <% }%>
 </ul>
 </body>
 </html>
