--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,6 +8,7 @@
     <title>Register New User</title>
 </head>
 <body>
+<% include partials/_header %>
 <form action="/register" method="post">
     <input type="email" name="email" placeholder="Email">
     <input type="password" name="password" placeholder="password">
