--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,6 +14,11 @@
             <button type="submit">Update</button>
         </form>
     </li>
+    <li>
+        <form action="/urls/<%= shortURL %>/delete" method="post">
+            <button type="submit">Delete</button>
+        </form>
+    </li>
 </ul>
 </body>
 </html>
