--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,7 @@
     <title>Login</title>
 </head>
 <body>
+<% include partials/_header %>
 <form action="/login" method="post">
     <input type="email" name="email" placeholder="email">
     <input type="password" name="password" placeholder="password">
